--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-AmberLite==22.0
-AmberUtils==21.0
 backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
 biopython @ file:///tmp/build/80754af9/biopython_1632738057617/work
 Bottleneck @ file:///opt/conda/conda-bld/bottleneck_1657175564434/work
 brotlipy==0.7.0
-certifi==2023.7.22
+captum==0.7.0
+certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1700303426725/work/certifi
 cffi @ file:///croot/cffi_1670423208954/work
 charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+cloudpickle @ file:///home/conda/feedstock_root/build_artifacts/cloudpickle_1674202310934/work
 cryptography @ file:///croot/cryptography_1677533068310/work
 cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1635519461629/work
 debugpy @ file:///tmp/build/80754af9/debugpy_1637091426235/work
 decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
 entrypoints @ file:///tmp/build/80754af9/entrypoints_1649908585034/work
+et-xmlfile==1.1.0
 fonttools==4.25.0
 idna @ file:///croot/idna_1666125576474/work
 ipykernel @ file:///opt/conda/conda-bld/ipykernel_1662361798230/work
@@ -22,6 +23,7 @@ joblib @ file:///croot/joblib_1666298844297/work
 jupyter_client @ file:///croot/jupyter_client_1671703053786/work
 jupyter_core @ file:///opt/conda/conda-bld/jupyter_core_1664917302524/work
 kiwisolver @ file:///croot/kiwisolver_1672387140495/work
+llvmlite==0.38.0
 MarkupSafe @ file:///opt/conda/conda-bld/markupsafe_1654597864307/work
 matplotlib @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-suite_1661439848456/work
 matplotlib-inline @ file:///opt/conda/conda-bld/matplotlib-inline_1662014470464/work
@@ -31,8 +33,11 @@ mkl-service==2.4.0
 MMPBSA.py==16.0
 munkres==1.1.4
 nest-asyncio @ file:///croot/nest-asyncio_1672387112409/work
+networkx @ file:///tmp/build/80754af9/networkx_1633639043937/work
+numba @ file:///home/conda/feedstock_root/build_artifacts/numba_1652226558760/work
 numexpr @ file:///croot/numexpr_1668713893690/work
 numpy @ file:///opt/conda/conda-bld/numpy_and_numpy_base_1653915516269/work
+openpyxl==3.0.10
 packaging @ file:///croot/packaging_1671697413597/work
 packmol-memgen==1.2.3rc0
 pandas==1.3.5
@@ -61,8 +66,10 @@ requests @ file:///opt/conda/conda-bld/requests_1657734628632/work
 sander==22.0
 scikit-learn @ file:///tmp/build/80754af9/scikit-learn_1642601761909/work
 scipy @ file:///opt/conda/conda-bld/scipy_1661390393401/work
+shap @ file:///home/conda/feedstock_root/build_artifacts/shap_1655716958540/work
 sip @ file:///tmp/abs_44cd77b_pu/croots/recipe/sip_1659012365470/work
 six @ file:///tmp/build/80754af9/six_1644875935023/work
+slicer @ file:///home/conda/feedstock_root/build_artifacts/slicer_1608146800664/work
 threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
 toml @ file:///home/conda/feedstock_root/build_artifacts/toml_1604308577558/work
 torch==1.13.1
